--- a/styles/style.css
+++ b/styles/style.css
@@ -26,24 +26,25 @@ body{
     display: flex;
     flex-wrap: wrap;
     padding: 10px;
-    max-width: 55vw;
+    max-width: 60vw;
+    min-width: 200px;
     background: linear-gradient(45deg,var(--darkPurple),var(--black));
     border-radius: 20px;
     margin:auto;
     top:30%;
     box-shadow: var(--lightPurple) 0px 0px 15px 2px;
+    justify-content: center;
 }
 .option{
     display:flex;
-    height: 200px;
-    width: 200px;
+    padding:50px;
+    max-width: 200px;
+    max-height: 200px;
     margin: 5px;
     background-color: #8a2cdc;
     box-shadow: #00000088 2px 2px 10px;
     border-radius: 20px;
     /*text*/
-    align-items: center;
-    justify-content: center;
     letter-spacing: 4px;
     font-size: larger;
     text-shadow: 2px 2px 40px #ffffff;
