--- a/styles/quizStyle.css
+++ b/styles/quizStyle.css
@@ -70,6 +70,14 @@ body{
     opacity: 0.80;
 }
 
+.points{
+    font-size: 40px;
+    font-weight: 900;
+    color:#ffffff;
+    position: absolute;
+    left:50%;
+}
+
 @keyframes question {
     0%{
         text-shadow: white 2px 2px 5px;
