--- a/styles/quizStyle.css
+++ b/styles/quizStyle.css
@@ -17,41 +17,61 @@ body{
     font-size: 24px;
     color:#ffffff;
     font-weight: bolder;
-    background:linear-gradient(45deg,var(--black),var(--darkPurple));
+    background: radial-gradient(var(--purple) 10%,black );
+    overflow-x: hidden;
 }
 
 .quest-cointainer{
     position: relative;
     padding: 20px;
-    max-width: 55vw;
-    background: linear-gradient(45deg,var(--darkPurple),var(--black));
+    background: linear-gradient(45deg,#350250,var(--black));
     border-radius: 20px;
     margin:auto;
     top:20%;
-    box-shadow: var(--lightPurple) 0px 0px 15px 2px;
+    box-shadow: var(purple) 0px 0px 50px;
+}
+@property --angle{
+    syntax: '<angle>';
+    initial-value: 0deg;
+    inherits: false;
+}
+.quest-cointainer::after{
+    content: '';
+    position: absolute;
+    top:50%;
+    left:50%;
+    translate: -50% -50%;
+    width:100%;
+    height: 100%;
+    background: conic-gradient(from var(--angle),transparent 0 25%,var(--purple) 25% 50%,transparent 50% 75%, var(--purple) 75%);
+    z-index: -1;
+    padding: 2px;
+    border-radius: 20px;
+    filter:blur(5px);
+
+    animation: quest-cointainer-animation 5s linear infinite;
 }
 .question{
     text-align: center;
     animation: 10s infinite question;
     font-size: 35px;
     letter-spacing: 4px;
+    z-index:10000;
 }
 
 .answer-cointainer
 {
     margin-top: 20px;
-    background-color: #8a2cdc7e;
-    border-radius: 20px;
     padding: 15px;
     font-weight: 900;
-    box-shadow: #00000088 2px 2px 5px;
+    z-index:10000;
     
 }
 .answer{
-    margin:10px;
-    padding:10px 5px;
-    background-color: var(--lightPurple);
-    border: #8a2cdc;
+    margin:5px;
+    padding:5px 2.5px;
+    background-color: var(--darkPurple);
+    border: var(--lightPurple) 2px solid;
     box-shadow: #00000088 0px 0px 15px;
     border-radius: 20px;
     display:flex;
@@ -64,18 +84,86 @@ body{
     text-shadow: #000000b6 0px 0px 5px;
 
     transition: opacity 0.5s;
+    z-index:10000;
 }
 .answer:hover{
     cursor:pointer;
     opacity: 0.80;
 }
-
+main{
+    margin:5px;
+    position: relative;
+    padding: 20px;
+    border-radius: 20px;
+    margin:auto;
+}
 .points{
-    font-size: 40px;
-    font-weight: 900;
-    color:#ffffff;
+    --width:0; /*PASEK POSTEPU*/
+    position: relative;
+    display: block;
+    height: 60px;
+    width: 60%;
+    background-color:var(--darkPurple);
+    margin:auto;
+    border-radius: 100px;
+    box-shadow: 0px 0px 10px #ffffff88;
+    outline:2px solid var(--lightPurple);
+    overflow: hidden;
+    margin-bottom: 25px;
+}
+.points::before{
+    margin-left: 0px;
+    content: '';
     position: absolute;
-    left:50%;
+    top:0;
+    left:0;
+    height:100%;
+    width:var(--width);
+    background-color: #BC6FF1;
+    transition: width 0.4s;
+    border:1px var(--lightPurple);
+}
+.star{
+    position: absolute;
+    font-size: 4px;
+    color:white;
+    animation: star 5s linear infinite 2s;
+}
+.timer{
+    position: relative;
+    display: block;
+    width:50px;
+    height: 50px;
+    border-radius: 100%;
+    background:radial-gradient(black,var(--darkPurple));
+    color:white;
+    font-size: 34px;
+    margin:auto;
+    margin-bottom: 25px;
+    text-align: center;
+    align-content: center;
+
+}
+
+@keyframes star {
+    0%{
+        opacity: 0.9;
+    }
+    60%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 0.9;
+    }
+}
+
+@keyframes quest-cointainer-animation {
+    from{
+        --angle:0deg;
+    }
+    to{
+        --angle:360deg;
+    }
 }
 
 @keyframes question {
@@ -88,4 +176,8 @@ body{
     100%{
         text-shadow: white 2px 2px 5px;
     }
+}
+
+@media  {
+    
 }
