--- a/styles/quizStyle.css
+++ b/styles/quizStyle.css
@@ -22,12 +22,11 @@ body{
 }
 
 .quest-cointainer{
-    position: relative;
-    padding: 20px;
+    position: relative;;
+    padding: 30px;
     background: linear-gradient(45deg,#350250,var(--black));
     border-radius: 20px;
     margin:auto;
-    top:20%;
     box-shadow: var(purple) 0px 0px 50px;
 }
 @property --angle{
@@ -135,13 +134,14 @@ main{
     width:50px;
     height: 50px;
     border-radius: 100%;
-    background:radial-gradient(black,var(--darkPurple));
+    background:radial-gradient(black,var(--purple));
     color:white;
     font-size: 34px;
     margin:auto;
     margin-bottom: 25px;
     text-align: center;
     align-content: center;
+    box-shadow: #8a2cdc 0px 0px 10px;
 }
 
 @keyframes star {
