--- a/styles/style.css
+++ b/styles/style.css
@@ -57,4 +57,20 @@ body{
     cursor:pointer;
     opacity: 0.80;
 }
-
+.star{
+    position: absolute;
+    font-size: 4px;
+    color:white;
+    animation: star 5s linear infinite 2s;
+}
+@keyframes star {
+    0%{
+        opacity: 0.9;
+    }
+    60%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 0.9;
+    }
+}
